# goit-ds-hw-01

./: README.md
personal_assistant/: Dockerfile  hw-08.py  pyproject.toml
