[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = "Консольний персональний помічник"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"